tests/expectations/compiler/function/self_fail.out
Error [ETYC0372040]: The allowed accesses to `self` are `self.caller` and `self.signer`.
    --> compiler-test:4:21
     |
   4 |         return self.foo == addr;
     |                     ^^^
